@@ -452,3 +452,4 @@
 20140511 autogen.sh: fix line break (Sergio).
 20140706 configure.ac,fmfconv_ff.c: add libav10 support (thanks, Alberto Garcia)
          (Anton Khirnov and Sergio).
+20150411 compat/win32/distribution.mk: prefer groff over man2html (Sergio).
